# dnsimple-python

./: .gitattributes  .gitignore  .markdownlint.yaml  .tool-versions  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README  README.markdown  README.md  RELEASING.md  circle.yml  dnsimple.py  poetry.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.dependabot/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  dependabot_pr.yml  release.yml  sync-test-fixtures.yml
dnsimple/: __init__.py  _version.py  client.py  dnsimple.py  dnsimple_version.py  exceptions.py  extra.py  response.py  token_authentication.py  version.py
dnsimple/service/: __init__.py  accounts.py  billing.py  certificates.py  contacts.py  dns_analytics.py  domains.py  domains_research.py  identity.py  oauth.py  registrar.py  secondary_dns.py  services.py  templates.py  tlds.py  vanity_name_servers.py  webhooks.py  zones.py
dnsimple/struct/: __init__.py  access_token.py  account.py  batch_change_zone_records.py  certificate.py  charge.py  collaborator.py  contact.py  delegation_signer_record.py  dns_analytics.py  dnssec.py  domain.py  domain_check.py  domain_premium_price.py  domain_price.py  domain_push.py  domain_registration.py  domain_renewal.py  domain_research_status.py  domain_restore.py  domain_transfer.py  domain_transfer_lock.py  email_forward.py  registrant.py  service.py  struct.py  template.py  template_record.py  tld.py  user.py  vanity_name_server.py  webhook.py  whoami.py  whois_privacy.py  zone.py  zone_distribution.py  zone_file.py  zone_record.py
tests/: .env.example  __init__.py  client_test.py  exception_test.py  fixtures.py  helpers.py  response_test.py  test_auth.py  test_domains.py  test_records.py
tests/service/: accounts_test.py  billing_test.py  certificates_test.py  contacts_test.py  dns_analytics_test.py  domains_collaborators_test.py  domains_delegation_signer_records_test.py  domains_dnssec_test.py  domains_email_forwards_test.py  domains_pushes_test.py  domains_research_test.py  domains_test.py  identity_test.py  oauth_test.py  registrar_auto_renewal_test.py  registrar_delegation_test.py  registrar_domain_transfer_lock_test.py  registrar_registrant_test.py  registrar_test.py  registrar_whois_privacy_test.py  services_domains_test.py  (+9 more)
(+59 files in other folders)
