[tool.poetry]
name = "dnsimple"
version = "2.10.0"
description = "DNSimple client for Python"
authors = ["DNSimple External Integrations Team <support@dnsimple.com>"]
readme = "README.md"
packages = [{include = "dnsimple"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"
omitempty = "^0.1.1"

[tool.poetry.group.test.dependencies]
responses = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
