[tool.poetry]
name = "dnsimple"
version = "8.0.0"
description = "DNSimple API service for python"
authors = ["DNSimple <support@dnsimple.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dnsimple" }]
homepage = "https://github.com/dnsimple/dnsimple-python"
repository = "https://github.com/dnsimple/dnsimple-python"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.2"
omitempty = "^0.1.1"
# Minimum versions for transitive dependencies (pulled in via requests) to
# pick up security fixes. urllib3 >=2.7.0 covers CVE-2026-44431 and
# CVE-2026-44432; idna >=3.15 covers CVE-2026-45409.
urllib3 = ">=2.7.0"
idna = ">=3.15"

[tool.poetry.group.test.dependencies]
responses = ">=0.23.1,<0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
